--- a/app/src/main/res/layout/activity_add_print_supplier_cost.xml
+++ b/app/src/main/res/layout/activity_add_print_supplier_cost.xml
@@ -115,6 +115,27 @@
                     android:textColor="@color/gray"
                     android:textSize="16sp" />
 
+                    <RadioGroup
+                        android:id="@+id/cost_per"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <RadioButton
+                            android:id="@+id/unit"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:checked="true"
+                            android:text="@string/per_unit" />
+
+                        <RadioButton
+                            android:id="@+id/total"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="20dp"
+                            android:text="@string/total" />
+                    </RadioGroup>
+
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
