--- a/app/src/main/res/layout/fragment_print_supplier_cost_view.xml
+++ b/app/src/main/res/layout/fragment_print_supplier_cost_view.xml
@@ -89,7 +89,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/cost"
+                    android:text="@string/cost_unit_total"
                     android:textColor="@color/light_gray"
                     android:textSize="16sp" />
 
