--- a/app/src/main/res/layout/fragment_purchase_supplier_cost_view.xml
+++ b/app/src/main/res/layout/fragment_purchase_supplier_cost_view.xml
@@ -86,40 +86,56 @@
                 android:paddingStart="10dp"
                 android:paddingEnd="10dp">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/cost_unit_total"
-                    android:textColor="@color/light_gray"
-                    android:textSize="16sp" />
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
 
                     <TextView
-                        android:id="@+id/cost"
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="5dp"
+                        android:text="@string/cost"
+                        android:textColor="@color/light_gray"
+                        android:textSize="16sp" />
+
+                    <TextView
+                        android:id="@+id/quantity"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentEnd="true"
+                        android:layout_marginEnd="5dp"
                         android:importantForAutofill="no"
-                        android:padding="5dp"
+                        android:text="Qty : 10"
+                        android:textColor="@color/black"
+                        android:textSize="16sp" />
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:padding="5dp">
+
+                    <TextView
+                        android:id="@+id/cost_unit"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:importantForAutofill="no"
+                        android:text="Unit : 50"
                         android:textColor="@color/black"
                         android:textSize="16sp" />
 
                     <TextView
-                        android:id="@+id/cost_type"
-                        android:layout_width="match_parent"
+                        android:id="@+id/cost_Total"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="15dp"
-                        android:layout_marginTop="5dp"
+                        android:layout_alignParentEnd="true"
                         android:importantForAutofill="no"
-                        android:padding="5dp"
+                        android:text="Total : 500"
                         android:textColor="@color/black"
-                        android:textSize="16sp"
-                        android:textStyle="bold" />
-                </LinearLayout>
+                        android:textSize="16sp" />
+                </RelativeLayout>
+
+
             </LinearLayout>
 
             <View
