--- a/app/src/main/res/layout/activity_edit_production_supplier_cost.xml
+++ b/app/src/main/res/layout/activity_edit_production_supplier_cost.xml
@@ -130,7 +130,6 @@
                     android:textSize="16sp" />
             </LinearLayout>
 
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -147,33 +146,56 @@
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:background="@drawable/et_gray_border">
+                    android:layout_marginTop="5dp">
 
-                    <Spinner
-                        android:id="@+id/currency_spinner"
-                        android:layout_width="wrap_content"
-                        android:layout_height="40dp"
+                    <com.jem.fliptabs.FlipTab
+                        android:id="@+id/cost_per_switch"
+                        android:layout_width="130dp"
+                        android:layout_height="wrap_content"
+                        app:leftTabText="Unit"
+                        app:rightTabText="@string/total"
+                        app:startingTab="left"
+                        android:layout_centerVertical="true"
+                        android:layout_marginStart="5dp"
                         android:layout_alignParentEnd="true"
-                        android:background="@drawable/calender_yellow"
-                        android:entries="@array/currency"
-                        android:padding="5dp" />
+                        app:removeDefaultPadding="true"
+                        app:overallColor="@color/colorAccent"
+                        app:flipAnimationDuration="0"
+                        app:wobbleAngle="0"
+                        app:wobbleReturnAnimationDuration="0"
+                        app:borderWidth="1dp"/>
 
-                    <EditText
-                        android:id="@+id/cost"
+                    <RelativeLayout
                         android:layout_width="match_parent"
-                        android:layout_height="40dp"
-                        android:layout_toStartOf="@+id/currency_spinner"
-                        android:background="@color/transparent"
-                        android:hint="@string/cost"
-                        android:importantForAutofill="no"
-                        android:inputType="numberDecimal"
-                        android:padding="10dp"
-                        android:textColor="@color/black"
-                        android:textSize="16sp" />
+                        android:layout_height="wrap_content"
+                        android:layout_toStartOf="@+id/cost_per_switch"
+                        android:background="@drawable/et_gray_border">
+
+                        <Spinner
+                            android:id="@+id/currency_spinner"
+                            android:layout_width="wrap_content"
+                            android:layout_height="40dp"
+                            android:layout_alignParentEnd="true"
+                            android:background="@drawable/calender_yellow"
+                            android:entries="@array/currency"
+                            android:padding="5dp" />
+
+                        <EditText
+                            android:id="@+id/cost"
+                            android:layout_width="match_parent"
+                            android:layout_height="40dp"
+                            android:layout_toStartOf="@+id/currency_spinner"
+                            android:background="@color/transparent"
+                            android:hint="@string/cost"
+                            android:importantForAutofill="no"
+                            android:inputType="numberDecimal"
+                            android:padding="10dp"
+                            android:textColor="@color/black"
+                            android:textSize="16sp" />
+                    </RelativeLayout>
+
                 </RelativeLayout>
             </LinearLayout>
-
 
 
             <LinearLayout
@@ -297,6 +319,48 @@
                     android:padding="10dp"
                     android:textColor="@color/black"
                     android:textSize="16sp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/attach_file"
+                    android:textColor="@color/black"
+                    android:textSize="16sp" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:background="@drawable/et_white"
+                    android:padding="5dp">
+
+                    <androidx.appcompat.widget.AppCompatButton
+                        android:id="@+id/choose_file"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:elevation="0dp"
+                        android:text="@string/choose_file"
+                        android:textAllCaps="false"
+                        android:textColor="@color/black" />
+
+
+                    <TextView
+                        android:id="@+id/files_chosen"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:hint="@string/no_file_choose"
+                        android:textColor="@color/black"
+                        android:textSize="16sp" />
+                </LinearLayout>
+
+
             </LinearLayout>
 
             <Button
