--- a/app/src/main/res/layout/activity_request_details.xml
+++ b/app/src/main/res/layout/activity_request_details.xml
@@ -54,8 +54,8 @@
                     android:layout_alignParentEnd="true"
                     android:layout_centerVertical="true"
                     android:src="@drawable/ic_delete"
-                    app:tint="@color/red"
-                    android:visibility="gone"/>
+                    android:visibility="gone"
+                    app:tint="@color/red" />
 
                 <TextView
                     android:id="@+id/job_orders"
@@ -137,199 +137,202 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
 
-        <androidx.core.widget.NestedScrollView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/request_details_bg">
-
-            <LinearLayout
+            <androidx.core.widget.NestedScrollView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:paddingStart="20dp"
-                android:paddingTop="20dp"
-                android:paddingEnd="20dp"
-                android:paddingBottom="10dp">
+                android:layout_height="match_parent"
+                android:background="@color/request_details_bg">
 
                 <LinearLayout
-                    android:id="@+id/sales_approval_layout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:visibility="gone">
-
-                    <androidx.appcompat.widget.AppCompatButton
-                        android:id="@+id/sales_approve"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginEnd="10dp"
-                        android:layout_weight="1"
-                        android:background="@drawable/btn_green"
-                        android:text="@string/approve"
-                        android:textAllCaps="false"
-                        android:textColor="@color/white" />
-
-                    <androidx.appcompat.widget.AppCompatButton
-                        android:id="@+id/sales_reject"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="10dp"
-                        android:layout_weight="1"
-                        android:background="@drawable/btn_red"
-                        android:text="@string/reject"
-                        android:textAllCaps="false"
-                        android:textColor="@color/white" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginTop="10dp"
-                    android:background="@drawable/white_curved"
                     android:orientation="vertical"
-                    android:paddingStart="15dp"
-                    android:paddingTop="5dp"
-                    android:paddingEnd="10dp"
-                    android:paddingBottom="5dp">
+                    android:paddingStart="20dp"
+                    android:paddingTop="20dp"
+                    android:paddingEnd="20dp"
+                    android:paddingBottom="10dp">
 
-                    <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_centerVertical="true"
-                            android:text="@string/request_details"
-                            android:textColor="@color/black"
-                            android:textSize="20sp" />
-
-
-                        <ImageView
-                            android:id="@+id/expand_details"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_alignParentEnd="true"
-                            android:layout_centerVertical="true"
-                            android:contentDescription="@string/description"
-                            android:padding="5dp"
-                            android:src="@drawable/ic_arrow_down" />
-                    </RelativeLayout>
-
-                    <FrameLayout
-                        android:id="@+id/request_details_content"
+                    <LinearLayout
+                        android:id="@+id/sales_approval_layout"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="10dp"
-                        android:visibility="gone" />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginTop="10dp"
-                    android:background="@drawable/white_curved"
-                    android:orientation="vertical"
-                    android:paddingStart="15dp"
-                    android:paddingTop="5dp"
-                    android:paddingEnd="10dp"
-                    android:paddingBottom="5dp">
-
-                    <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_centerVertical="true"
-                            android:text="@string/request_cost"
-                            android:textColor="@color/black"
-                            android:textSize="20sp" />
-
-
-                        <ImageView
-                            android:id="@+id/expand_cost"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_alignParentEnd="true"
-                            android:layout_centerVertical="true"
-                            android:contentDescription="@string/description"
-                            android:padding="5dp"
-                            android:src="@drawable/ic_arrow_down" />
-                    </RelativeLayout>
-
-                    <RelativeLayout
-                        android:id="@+id/request_cost_container"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
                         android:visibility="gone">
 
-                        <LinearLayout
-                            android:id="@+id/no_cost_container"
-                            android:layout_width="match_parent"
+                        <androidx.appcompat.widget.AppCompatButton
+                            android:id="@+id/sales_approve"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:orientation="vertical"
-                            android:paddingTop="20dp"
-                            android:paddingBottom="20dp"
-                            android:visibility="gone">
+                            android:layout_marginEnd="10dp"
+                            android:layout_weight="1"
+                            android:background="@drawable/btn_green"
+                            android:text="@string/approve"
+                            android:textAllCaps="false"
+                            android:textColor="@color/white" />
 
-                            <ImageView
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:contentDescription="@string/description"
-                                android:src="@drawable/ic_supplier_cost" />
+                        <androidx.appcompat.widget.AppCompatButton
+                            android:id="@+id/sales_reject"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="10dp"
+                            android:layout_weight="1"
+                            android:background="@drawable/btn_red"
+                            android:text="@string/reject"
+                            android:textAllCaps="false"
+                            android:textColor="@color/white" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginTop="10dp"
+                        android:background="@drawable/white_curved"
+                        android:orientation="vertical"
+                        android:paddingStart="15dp"
+                        android:paddingTop="5dp"
+                        android:paddingEnd="10dp"
+                        android:paddingBottom="5dp">
+
+                        <RelativeLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent">
 
                             <TextView
-                                android:layout_width="match_parent"
+                                android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_marginTop="5dp"
-                                android:gravity="center"
-                                android:text="@string/no_supplier_cost"
-                                android:textColor="@color/light_gray"
-                                android:textSize="16sp"
-                                android:textStyle="bold" />
+                                android:layout_centerVertical="true"
+                                android:text="@string/request_details"
+                                android:textColor="@color/black"
+                                android:textSize="20sp" />
 
 
-                            <Button
-                                android:id="@+id/add_cost"
-                                android:layout_width="match_parent"
+                            <ImageView
+                                android:id="@+id/expand_details"
+                                android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_marginTop="20dp"
-                                android:background="@drawable/btn_yellow"
-                                android:baselineAligned="false"
-                                android:text="@string/add_supplier_cost"
-                                android:textAllCaps="false"
-                                android:textColor="@color/black" />
-
-                        </LinearLayout>
+                                android:layout_alignParentEnd="true"
+                                android:layout_centerVertical="true"
+                                android:contentDescription="@string/description"
+                                android:padding="5dp"
+                                android:src="@drawable/ic_arrow_down" />
+                        </RelativeLayout>
 
                         <FrameLayout
-                            android:id="@+id/cost_details_content"
+                            android:id="@+id/request_details_content"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="10dp"
-                            android:background="@drawable/add_forms_curved"
-                            android:paddingTop="10dp"
-                            android:paddingBottom="10dp"
                             android:visibility="gone" />
 
-                        <ImageView
-                            android:id="@+id/edit_cost"
-                            android:layout_width="wrap_content"
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginTop="10dp"
+                        android:background="@drawable/white_curved"
+                        android:orientation="vertical"
+                        android:paddingStart="15dp"
+                        android:paddingTop="5dp"
+                        android:paddingEnd="10dp"
+                        android:paddingBottom="5dp">
+
+                        <RelativeLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent">
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_centerVertical="true"
+                                android:text="@string/request_cost"
+                                android:textColor="@color/black"
+                                android:textSize="20sp" />
+
+
+                            <ImageView
+                                android:id="@+id/edit_cost"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_toStartOf="@id/expand_cost"
+                                android:padding="5dp"
+                                android:src="@drawable/ic_edit"
+                                android:visibility="gone"
+                                app:tint="@color/red" />
+
+
+                            <ImageView
+                                android:id="@+id/expand_cost"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_alignParentEnd="true"
+                                android:layout_centerVertical="true"
+                                android:contentDescription="@string/description"
+                                android:padding="5dp"
+                                android:src="@drawable/ic_arrow_down" />
+                        </RelativeLayout>
+
+                        <RelativeLayout
+                            android:id="@+id/request_cost_container"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_alignParentEnd="true"
-                            android:padding="5dp"
-                            android:src="@drawable/ic_edit"
-                            android:visibility="gone" />
-                    </RelativeLayout>
+                            android:visibility="gone">
+
+                            <LinearLayout
+                                android:id="@+id/no_cost_container"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:orientation="vertical"
+                                android:paddingTop="20dp"
+                                android:paddingBottom="20dp"
+                                android:visibility="gone">
+
+                                <ImageView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:contentDescription="@string/description"
+                                    android:src="@drawable/ic_supplier_cost" />
+
+                                <TextView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginTop="5dp"
+                                    android:gravity="center"
+                                    android:text="@string/no_supplier_cost"
+                                    android:textColor="@color/light_gray"
+                                    android:textSize="16sp"
+                                    android:textStyle="bold" />
+
+
+                                <Button
+                                    android:id="@+id/add_cost"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginTop="20dp"
+                                    android:background="@drawable/btn_yellow"
+                                    android:baselineAligned="false"
+                                    android:text="@string/add_supplier_cost"
+                                    android:textAllCaps="false"
+                                    android:textColor="@color/black" />
+
+                            </LinearLayout>
+
+                            <FrameLayout
+                                android:id="@+id/cost_details_content"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="10dp"
+                                android:background="@drawable/add_forms_curved"
+                                android:paddingTop="10dp"
+                                android:paddingBottom="10dp"
+                                android:visibility="gone" />
+
+                        </RelativeLayout>
+
+                    </LinearLayout>
 
                 </LinearLayout>
 
-            </LinearLayout>
-
-        </androidx.core.widget.NestedScrollView>
+            </androidx.core.widget.NestedScrollView>
         </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
     </LinearLayout>
 
