--- a/app/src/main/res/layout/item_job_order_request.xml
+++ b/app/src/main/res/layout/item_job_order_request.xml
@@ -43,12 +43,12 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/request_id"
+                        android:text="@string/request_name"
                         android:textColor="@color/black"
                         android:textSize="16sp" />
 
                     <TextView
-                        android:id="@+id/request_id"
+                        android:id="@+id/request_name"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="5dp"
