--- a/app/src/main/res/layout/activity_job_order_details.xml
+++ b/app/src/main/res/layout/activity_job_order_details.xml
@@ -312,7 +312,7 @@
                     android:layout_centerVertical="true"
                     android:layout_marginStart="5dp"
                     android:layout_marginEnd="20dp"
-                    android:text="@string/download"
+                    android:text="@string/preview"
                     android:textColor="@color/text_dark_blue"
                     android:textSize="18sp" />
 
