--- a/app/src/main/res/xml/network_security_config.xml
+++ b/app/src/main/res/xml/network_security_config.xml
@@ -6,5 +6,9 @@
         <domain includeSubdomains="true">cat-sw.com</domain>
     </domain-config>
 
+    <domain-config cleartextTrafficPermitted="false">
+        <domain includeSubdomains="true">cpadmin.cat.com.eg</domain>
+    </domain-config>
+
 
 </network-security-config>
