--- a/app/src/main/res/layout/activity_request_details.xml
+++ b/app/src/main/res/layout/activity_request_details.xml
@@ -80,8 +80,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:adjustViewBounds="true"
+                android:padding="5dp"
                 android:contentDescription="@string/description"
-                android:paddingHorizontal="20dp"
                 android:src="@drawable/request_1" />
 
 
