--- a/app/src/main/res/layout/item_notifications.xml
+++ b/app/src/main/res/layout/item_notifications.xml
@@ -14,6 +14,7 @@
         app:cardElevation="2.5dp">
 
         <LinearLayout
+            android:id="@+id/parent_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/notification_list_item_bg"
@@ -21,17 +22,18 @@
             android:padding="10dp">
 
             <LinearLayout
-                android:id="@+id/parent_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 tools:ignore="UseCompoundDrawables">
 
                 <ImageView
+                    android:id="@+id/notification_img"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@drawable/ic_notifications"
                     app:tint="@color/colorAccent"
+                    android:layout_marginTop="5dp"
                     android:contentDescription="@string/description" />
 
                 <TextView
