--- a/app/src/main/res/layout/activity_requests.xml
+++ b/app/src/main/res/layout/activity_requests.xml
@@ -111,31 +111,31 @@
                 android:id="@+id/purchase_tab"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/purchasing" />
+                android:icon="@drawable/ic_purchase"/>
 
             <com.google.android.material.tabs.TabItem
                 android:id="@+id/print_tab"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/printing" />
+                android:icon="@drawable/ic_print"/>
 
             <com.google.android.material.tabs.TabItem
                 android:id="@+id/production_tab"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/production" />
+                android:icon="@drawable/ic_production"/>
 
             <com.google.android.material.tabs.TabItem
                 android:id="@+id/photography_tab"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/photography" />
+                android:icon="@drawable/ic_photography" />
 
             <com.google.android.material.tabs.TabItem
                 android:id="@+id/extras_tab"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/extras" />
+                android:icon="@drawable/ic_wallet" />
 
 
         </com.google.android.material.tabs.TabLayout>
